# ndef-rs

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  shell.nix
.github/workflows/: rust.yml
.reuse/: dep5
examples/: serialize_text.rs
src/: error.rs  lib.rs
