# SPDX-FileCopyrightText: © 2024 Foundation Devices, Inc. <hello@foundation.xyz>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
categories = ["embedded", "no-std"]
description = """This crate provides a `#[no_std]` library to implement a NFC Data Exchange Format structures."""
edition = "2021"
keywords = ["no-std", "nfc"]
license = "GPL-3.0-or-later"
name = "ndef"
repository = "https://github.com/Foundation-Devices/ndef-rs"
version = "0.4.0"

[dependencies]
derive_more = { version = "1.0", default-features = false, features = ["from"] }
minicbor = { version = "0.24", optional = true }
rustversion = "1.0"

[target.'cfg(not(features = "alloc"))'.dependencies]
heapless = { version = "0.8", default-features = false }

[features]
alloc = ["minicbor?/alloc"]
cbor = ["dep:minicbor"]

[[example]]
name = "serialize_text"
path = "examples/serialize_text.rs"
